# enowars-service-example

./: .gitignore  LICENSE  README.md  checker
.github/workflows/: enochecker_test-rs.yml  enochecker_test.yml  enochecker_test_cs.yml
checker/: Dockerfile  docker-compose.yml
checker-rs/: Cargo.toml  Dockerfile  docker-compose.yml
checker-rs/src/: main.rs  notebook_client.rs
checker/src/: checker.py  requirements.txt
checker3/: Dockerfile  docker-compose.yaml  requirements.txt
checker3/src/: checker.py
checker_c#/: Dockerfile  docker-compose.yml
checker_c#/N0t3b00kChecker/: Checker.cs  CheckerInitializer.cs  N0t3b00kChecker.csproj  NotebookClient.cs
checker_c#/N0t3b00kChecker/Db/: CheckerDb.cs  NotebookUser.cs
checker_cs/: .env  N0t3b00kChecker.sln  README.md  docker-compose.yml
checker_cs/N0t3b00kChecker/: Checker.cs  CheckerInitializer.cs  N0t3b00kChecker.csproj  NotebookClient.cs
checker_cs/N0t3b00kChecker/Db/: CheckerDb.cs
documentation/: README.md
service/: .dockerignore  .env  Dockerfile  docker-compose.yml  entrypoint.sh
service/code/: Dockerfile  n0t3b00k.py
service/src/: n0t3b00k.py
