[package]
name = "checker-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enochecker = { git = "https://github.com/enowars/enochecker-rs" }
actix-web = "^4.0.0-beta.6"
mongodb = "^2.0.0-alpha.1"
serde = "*"
tracing = "*"
